--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://pausegamer.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
@@ -11,6 +11,7 @@ permalink: /:title
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-seo-tag
 
 paginate: 7
 paginate_path: "/blog/page/:num"
