--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -97,7 +97,7 @@ footer__description: Tout ce qu'on veut c'est des news sur le monde du jeu vidé
 
 # Social Links
 social:
-#- {icon: "twitter", link: "https://twitter.com"}
+- {icon: "twitter", link: "https://x.com/PauseGamerRedac"}
 #- {icon: "facebook", link: "https://facebook.com"}
 #- {icon: "codepen", link: "https://codepen.io"}
 #- {icon: "pinterest", link: "https://pinterest.com"}
