Add tag secion in homepage

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -63,7 +63,7 @@ videos__settings:
 # Tag Section Settings
 tag__settings:
   enable: true
-  tag: news # To display the tag section, specify your favorite tag.
+  tag: Test # To display the tag section, specify your favorite tag.
 
 
 #-------------------------------
